--- a/index.html
+++ b/index.html
@@ -203,5 +203,48 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
+    
+    <!-- Footer Bar -->
+    <footer class="w-100 bg-gray-800 text-gray-100 border-top border-gray-700-50 mt-0 footer-bar" style="position: relative;">
+      <div class="container-fluid">
+        <div class="d-flex flex-column gap-3">
+          <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-4">
+            <!-- IIT Jodhpur Logo -->
+            <div class="footer-logo d-flex justify-content-center align-items-center mb-2 mb-md-0" style="min-width:120px;">
+              <img src="public/iitj-logo.png" alt="IIT Jodhpur Logo" class="footer-logo-img" />
+            </div>
+            <!-- Quick Links -->
+            <div class="mb-2 mb-md-0" style="min-width: 220px;">
+              <h5 class="fw-bold text-blue-300 mb-2">Quick Links</h5>
+              <ul class="list-unstyled mb-0">
+                <li><a href="https://www.iitj.ac.in/civil-and-infrastructure-engineering/" class="text-gray-200 hover-text-blue-400" target="_blank" rel="noopener">IIT Jodhpur CIE</a></li>
+              </ul>
+            </div>
+            <!-- Contact Section -->
+            <div class="mb-2 mb-md-0" style="min-width: 320px;">
+              <h5 class="fw-bold text-blue-300 mb-2">Contact</h5>
+              <div class="text-gray-200 small">
+                <div class="fw-bold">Department of Civil and Infrastructure Engineering</div>
+                Indian Institute of Technology Jodhpur<br>
+                NH 62 Nagaur Road<br>
+                Karwar 342030<br>
+                Jodhpur District<br>
+                eMail: office@civil@iitj.ac.in<br>
+                Phone: 
+              </div>
+            </div>
+            <!-- Civil Departmental Society Logo -->
+            <div class="footer-logo d-flex justify-content-center align-items-center mb-2 mb-md-0" style="min-width:120px;">
+              <img src="public/logo.png" alt="CIE Society Logo" class="footer-logo-img" />
+            </div>
+          </div>
+          <!-- Social Media Icons -->
+          <div class="d-flex flex-row justify-content-center align-items-center gap-4 mt-2">
+            <a href="https://www.instagram.com/cie_bds/" target="_blank" rel="noopener" aria-label="Instagram" class="text-gray-200 hover-text-blue-400 social-icon"><svg width="40" height="40" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.334 3.608 1.308.974.974 1.246 2.241 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.334 2.633-1.308 3.608-.974.974-2.241 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.334-3.608-1.308-.974-.974-1.246-2.241-1.308-3.608C2.175 15.647 2.163 15.267 2.163 12s.012-3.584.07-4.85c.062-1.366.334-2.633 1.308-3.608.974-.974 2.241-1.246 3.608-1.308C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.013 7.052.072 5.771.131 4.659.425 3.678 1.406c-.98.98-1.274 2.092-1.334 3.374C2.013 5.668 2 6.077 2 9.333v5.334c0 3.256.013 3.665.072 4.946.06 1.282.354 2.394 1.334 3.374.98.98 2.092 1.274 3.374 1.334C8.332 23.987 8.741 24 12 24s3.668-.013 4.948-.072c1.282-.06 2.394-.354 3.374-1.334.98-.98 1.274-2.092 1.334-3.374.059-1.281.072-1.69.072-4.946V9.333c0-3.256-.013-3.665-.072-4.946-.06-1.282-.354-2.394-1.334-3.374-.98-.98-2.092-1.274-3.374-1.334C15.668.013 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm6.406-11.845a1.44 1.44 0 1 0 0 2.88 1.44 1.44 0 0 0 0-2.88z"/></svg></a>
+            <a href="https://www.linkedin.com/company/civil-and-infrastructure-engineering-departmental-society-iit-jodhpur/" target="_blank" rel="noopener" aria-label="LinkedIn" class="text-gray-200 hover-text-blue-400 social-icon"><svg width="40" height="40" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.784-1.75-1.75s.784-1.75 1.75-1.75 1.75.784 1.75 1.75-.784 1.75-1.75 1.75zm13.5 11.268h-3v-5.604c0-1.337-.025-3.063-1.868-3.063-1.868 0-2.154 1.459-2.154 2.968v5.699h-3v-10h2.881v1.367h.041c.401-.761 1.379-1.563 2.841-1.563 3.039 0 3.6 2.001 3.6 4.601v5.595z"/></svg></a>
+          </div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
